jlatexmath (0.9.7)
	* Bugs fix: Columns was not centered in matrix env and \cot was
          displayed as \cos.
	* Add an option in jlmDynamic ([i]) to give the possibility to insert
          a group as if it was not a group.

jlatexmath (0.9.6)
        * A TeXFormula.root must not be null in partial mode.
        * Provide a manifest for the fop plugin defining the dependency on the
          jlatexmath jar package

jlatexmath (0.9.5)
	* Remove the Java reflection use and reorganization in the fonts dir.

	* Delegate the font rendering to java.

        * add \jlmText,\jlmTextit,\jlmTextbf,\jlmTextitbf and \jlmExternalFont

        * \huge\huge bug definitly fixed

        * \huge\huge foo apply two times the huge factor

        * In \overbrace{a}, the brace were misplaced.

        * Add \(...\) & \[...\], $$...$$, \begin{math}...\end{math} and
          \begin{displaymath}...\end{displaymath}

        * No display with \left in partial mode

        * The fop plugin is now available with fop 0.95 and 1.0

        * \left(...\right) was inactive in \mathsf

 -- Calixte Denizet <calixte@contrib.scilab.org>

jlatexmath (0.9.4)

        * Update build.xml to add a base directory in zip archives.

        * Add \og and \fg.

        * In text mode, the normal dot must be a punctuation symbol.

        * Add \cal.

        * Add \it, \bf, \sc, ...

        * Add commands \textsc and \textcircled.

        * Fix a bug in the FOP plugin when latex is mixed with other
          image source.

        * $...$ was ignored

        * Add \raisebox and \romannumeral.

        * Handle options in \includegraphics.

        * Add a static method TeXFormula.setDefaultDPI().

        * Add a static method TeXFormula.setDPITarget(float dpi).

        * Add shadowbox, doublebox and ovalbox.

        * Fix bugs on rotatebox (bad default center), with the parser
          (...\end{foo}a... gave an error)) and improve the debug mode.
